# src/product-api/handlers/products.go
@@ -1,50 +1,12 @@
-// Package classification of Product API
-//
-// # Documentation for Product API
-//
-//	Schemes: http
-//	BasePath: /
-//	Verion: 1.0.0
-//
-//	Consumes:
-//	-application/json
-//
-//	Produces:
-//	-application/json
-//
-//swagger:meta
 package handlers
 
 import (
-	"context"
-	"fmt"
 	"log"
 	"net/http"
 	"strconv"
 
-	"github.com/berkayhellagun/microservice/src/product-api/data"
 	"github.com/gorilla/mux"
 )
-
-// A list of products return in the response
-// swagger:response productsResponse
-type productsResponseWrapper struct {
-	// All products in the system
-	// in: body
-	Body []data.Product
-}
-
-// swagger:response noContent
-type productsNoContent struct {
-}
-
-// swagger:parameters deleteProduct
-type productIDParameterWrapper struct {
-	// The ID of the product to delete from the database
-	// in: path
-	// required: true
-	ID int `json:"id"`
-}
 
 type Products struct {
 	l *log.Logger
@@ -107,30 +69,9 @@ type GenericError struct {
 	Message string `json:"message"`
 }
 
-type KeyProduct struct{}
-
-func (p Products) MiddlewareProductValidation(next http.Handler) http.Handler {
-	return http.HandlerFunc(func(rw http.ResponseWriter, r *http.Request) {
-		prod := data.Product{}
-		err := data.FromJSON(prod, r.Body)
-		if err != nil {
-			http.Error(rw, "Unable to decode json", http.StatusBadRequest)
-			return
-		}
-
-		// validate the product
-		err = prod.Validate()
-		if err != nil {
-			p.l.Println("[ERROR] validating product", err)
-			http.Error(
-				rw,
-				fmt.Sprintf("[ERROR] validating product %s", err),
-				http.StatusBadRequest)
-			return
-		}
-
-		ctx := context.WithValue(r.Context(), KeyProduct{}, prod)
-		req := r.WithContext(ctx)
-		next.ServeHTTP(rw, req)
-	})
+// ValidationError is a collection of validation error messages
+type ValidationError struct {
+	Messages []string `json:"messages"`
 }
+
+type KeyProduct struct{}
